# pythonstudy

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  FAQ.md  README.md  cppcheck  launch_tests_v4.sh  qt.conf  requirements.txt  src.rar
000 Cat Project/: cats.db  setup.cfg
01.1.PythonTools/: Fast_sort  Fastsort2  Key9part1  Key9part2  Search.c  Stat.c  Sum  Test cycle  Test sorts  Tests3  Tests_decode.sh  det.c  dmanager_module.c  door_struct.h  electro_snake.c  input  invert.c  jopajopa.c  launch_tests_v1.sh  launch_tests_v2.sh  launch_tests_v3.sh  launch_tests_v4.sh  list.c  list.h  list_test.c  matrix.c  matrix_arithmetic.c  matrix_extended.c  matrix_sort.c  shift  sle.c  Ллл
01.2.BasicTypes/: Untitled.ipynb
01.2.BasicTypes[hard]/: __init__.py  cppch
02.1.DataStructures/: graph.c  shunting_yard_algo.c
06.1.ModulesPackagesImport/basic_module/: README.md  setup.cfg  test_public.py
06.1.ModulesPackagesImport/basic_module/simple_pass_manager/: __init__.py  manager.py
06.1.ModulesPackagesImport/basic_module/simple_pass_manager/utils/: __init__.py  encryption.py  generation.py
06.1.ModulesPackagesImport/basic_module/tests/: test_manager.py
06.1.ModulesPackagesImport/steganography_tool/: README.md  setup.cfg  steganography_tool-0.0.1-py3-none-any.whl  test_cli.py  test_public.py
06.1.ModulesPackagesImport/steganography_tool/steganography_tool/: __init__.py  cli.py  decode.py  encode.py  utils.py
09.2.HW2/compgraph/: LIB_README.md  README.md  __main__.py  examples.py  memory_watchdog.py  setup.cfg  test_algorithms.py  test_operations.py
09.2.HW2/compgraph/compgraph/: __init__.py  algorithms.py  graph.py  operations.py
09.2.HW2/compgraph/examples/: examples.py  run_word_count.py
09.2.HW2/compgraph/resources/: idf_result.txt
09.2.HW2/compgraph/results/: idf_result.txt  pmi_result.txt  tf_idf_result_new.txt  word_count_result.txt  yandex_maps_result.txt
Scripts/: acyclic.bat  bcomps.bat  ccomps.bat  circo.bat  coverage-script.py  dijkstra.bat  dmypy-script.py  dot.bat  fdp.bat  gc.bat  gml2gv.bat  graphml2gv.bat  gv2gml.bat  gvcolor.bat  gvgen.bat  gvpack.bat  gvpr.bat  gxl2gv.bat  mm2gv.bat  mypyc  neato.bat  nop.bat  osage.bat  patchwork.bat  sccmap.bat  send2trash  sfdp.bat  stubtest-script.py  tred.bat  twopi.bat  unflatten.bat
conda-meta/: aiohttp-3.7.4.post0-py39h2bbff1b_2.json  anyio-3.5.0-py39haa95532_0.json  argon2-cffi-21.3.0-pyhd3eb1b0_0.json  argon2-cffi-bindings-21.2.0-py39h2bbff1b_0.json  asttokens-2.0.5-pyhd3eb1b0_0.json  async-timeout-3.0.1-py39haa95532_0.json  atomicwrites-1.4.0-py_0.json  attrs-21.4.0-pyhd3eb1b0_0.json  blas-1.0-mkl.json  (+185 more)
(+233 files in other folders)
