[metadata]
name = simple_pass_manager
version = 0.0.2
author = Valeeva Snezhana
author_email = valeeva1903@gmail.com
description = A small example package with password manager
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = simple_pass_manager
packages = find:
install_requires =
    cryptography
python_requires = >=3.9

[options.packages.find]
where = simple_pass_manager