[metadata]
name = steganography_tool
version = 0.0.1
author = Valeeva Snezhana
author_email = valeeva1903@gmail.com
description = A small package with steganography tool
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data=True
setup_requires =
    wheel
install_requires =
    click
    Pillow
python_requires = >=3.9

[options.entry_points]
console_scripts =
    steganography-tool = steganography_tool.cli:cli

[options.package_data]
* = lenna.png