[metadata]
name = compgraph
version = 0.0.1
author=Snezhana Valeeva
author_email=valeeva1903@gmail.com
description=Library for graph computation
keywords = compgraph
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = compgraph
packages = find:
install_requires =
    cryptography
python_requires = >=3.9

[options.packages.find]
where = compgraph