[metadata]
name = compgraph
version = 0.0.1
author = Snezhana Valeeva
author_email = valeeva1903@gmail.com
description = Library for graph computation
keywords = compgraph
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = C:\Users\valee\anaconda3\envs\public-2021-fall-master\09.2.HW2\compgraph\compgraph
packages = find:
python_requires = >=3.9

[options.packages.find]
where = compgraph